tests/reject/garbage_grammer.ml
void foo ID int string { } [] ;;;;;;
 //
int sars;

void main () {

}
